# pctime

./: .gitignore  LICENSE  README.md  README.zh-CN.md  index.html  package-lock.json  package.json
docs/: ARCHITECTURE.md  ARCHITECTURE.zh-CN.md
src/: App.css  App.tsx  ui.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: classifier.rs  commands.rs  ignored.rs  lib.rs  main.rs  models.rs  sampler.rs  storage.rs  visibility.rs
src-tauri/src/collector/: fallback.rs  mod.rs  windows.rs
